--- a/dev-org/dev-org/Main.storyboard
+++ b/dev-org/dev-org/Main.storyboard
@@ -73,6 +73,9 @@
                                 <rect key="frame" x="164" y="279" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Log In"/>
+                                <connections>
+                                    <action selector="loginPressed:" destination="79x-iv-g5o" eventType="touchUpInside" id="b5D-Wa-ahH"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mqC-mM-b11">
                                 <rect key="frame" x="16" y="180" width="343" height="30"/>
