--- a/dev-org/dev-org/SignUpView.xib
+++ b/dev-org/dev-org/SignUpView.xib
@@ -33,16 +33,16 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vud-Gt-yuR" userLabel="Developer Subview">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vud-Gt-yuR" userLabel="Developer Subview">
                     <rect key="frame" x="0.0" y="385" width="375" height="89"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vk6-ev-lLL">
                             <rect key="frame" x="310" y="0.0" width="51" height="31"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.84497937817258884" green="0.62720626805067847" blue="0.53061944747868928" alpha="0.3904377140410959" colorSpace="custom" customColorSpace="sRGB"/>
                         </switch>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Available for new projects" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jIZ-ES-fmj">
-                            <rect key="frame" x="16" y="5" width="195.5" height="21"/>
+                            <rect key="frame" x="16" y="5" width="196" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
@@ -59,22 +59,22 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HQA-n2-yAV" userLabel="Organization Subview">
-                    <rect key="frame" x="0.0" y="382" width="375" height="189"/>
+                    <rect key="frame" x="50" y="382" width="275" height="189"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Organization name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B4d-Q3-ghH">
-                            <rect key="frame" x="16" y="0.0" width="343.5" height="30"/>
+                            <rect key="frame" x="0.5" y="0.0" width="275" height="30"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mission statement:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vzl-6G-ZgI">
-                            <rect key="frame" x="24" y="38" width="122" height="17"/>
+                            <rect key="frame" x="0.0" y="38" width="122" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WBC-ID-YiG">
-                            <rect key="frame" x="16" y="59" width="343.5" height="130"/>
+                            <rect key="frame" x="0.0" y="63" width="275" height="126"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -83,9 +83,11 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="WBC-ID-YiG" firstAttribute="centerX" secondItem="HQA-n2-yAV" secondAttribute="centerX" id="4iQ-53-zw1"/>
+                        <constraint firstItem="B4d-Q3-ghH" firstAttribute="width" secondItem="WBC-ID-YiG" secondAttribute="width" id="ADg-03-81y"/>
+                        <constraint firstItem="vzl-6G-ZgI" firstAttribute="leading" secondItem="WBC-ID-YiG" secondAttribute="leading" id="Bvq-Rn-Ls6"/>
                         <constraint firstItem="vzl-6G-ZgI" firstAttribute="top" secondItem="B4d-Q3-ghH" secondAttribute="bottom" constant="8" id="IAu-Lb-9bw"/>
                         <constraint firstItem="B4d-Q3-ghH" firstAttribute="top" secondItem="HQA-n2-yAV" secondAttribute="top" id="f3G-Jb-s1I"/>
-                        <constraint firstItem="WBC-ID-YiG" firstAttribute="top" secondItem="vzl-6G-ZgI" secondAttribute="bottom" constant="4" id="ffB-Gh-Pcb"/>
+                        <constraint firstItem="WBC-ID-YiG" firstAttribute="top" secondItem="vzl-6G-ZgI" secondAttribute="bottom" constant="8" id="ffB-Gh-Pcb"/>
                         <constraint firstItem="B4d-Q3-ghH" firstAttribute="centerX" secondItem="HQA-n2-yAV" secondAttribute="centerX" id="rXO-um-DYH"/>
                         <constraint firstAttribute="bottom" secondItem="WBC-ID-YiG" secondAttribute="bottom" id="u8M-7m-lOd"/>
                     </constraints>
@@ -97,20 +99,22 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kUE-RO-5of">
-                    <rect key="frame" x="16" y="194" width="343.5" height="30"/>
+                    <rect key="frame" x="16.5" y="194" width="343" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="47x-55-Wbx">
-                    <rect key="frame" x="16" y="232" width="343.5" height="30"/>
+                    <rect key="frame" x="16.5" y="232" width="343" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bXY-2b-uXd">
-                    <rect key="frame" x="134" y="571" width="107" height="30"/>
-                    <state key="normal" title="Create Account"/>
+                    <rect key="frame" x="50" y="571" width="275" height="30"/>
+                    <state key="normal" title="Create Account" backgroundImage="button">
+                        <color key="titleColor" red="0.98161881350000002" green="0.98161881350000002" blue="0.98161881350000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
                     <connections>
                         <action selector="createAccountPressed:" destination="-1" eventType="touchUpInside" id="2Wb-EH-xID"/>
                     </connections>
@@ -137,12 +141,12 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j6r-4z-TkJ">
-                    <rect key="frame" x="235.5" y="308" width="123.5" height="30"/>
+                    <rect key="frame" x="235" y="308" width="124" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ad2-St-QZ5">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="npo" translatesAutoresizingMaskIntoConstraints="NO" id="Ad2-St-QZ5">
                     <rect key="frame" x="123" y="20" width="128" height="128"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="128" id="PJO-8h-fbm"/>
@@ -150,13 +154,13 @@
                     </constraints>
                 </imageView>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Website" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sBz-IQ-toQ">
-                    <rect key="frame" x="16" y="308" width="211.5" height="30"/>
+                    <rect key="frame" x="16" y="308" width="211" height="30"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="aco-Ov-ydG">
-                    <rect key="frame" x="16" y="346" width="343.5" height="29"/>
+                    <rect key="frame" x="16.5" y="346" width="343" height="29"/>
                     <segments>
                         <segment title="I'm a Developer"/>
                         <segment title="I'm a Non-Profit"/>
@@ -164,7 +168,7 @@
                     <color key="tintColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </segmentedControl>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.98161881345177671" green="0.98161881345177671" blue="0.98161881345177671" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="aco-Ov-ydG" firstAttribute="width" secondItem="eI5-3m-eYf" secondAttribute="width" id="1xr-Xg-0gs"/>
                 <constraint firstItem="X9O-Q0-zP7" firstAttribute="leading" secondItem="NyK-TS-84i" secondAttribute="trailing" constant="8" id="202-II-L0g"/>
@@ -175,26 +179,28 @@
                 <constraint firstItem="kUE-RO-5of" firstAttribute="width" secondItem="eI5-3m-eYf" secondAttribute="width" id="Eg6-ug-9vT"/>
                 <constraint firstItem="HQA-n2-yAV" firstAttribute="bottom" secondItem="bXY-2b-uXd" secondAttribute="top" id="Gcp-eo-6e0"/>
                 <constraint firstItem="j6r-4z-TkJ" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.33" id="Hhd-rG-igD"/>
-                <constraint firstItem="bXY-2b-uXd" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mdd-6B-cBa"/>
+                <constraint firstItem="bXY-2b-uXd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="MDz-8K-D58"/>
                 <constraint firstItem="Ad2-St-QZ5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="MmJ-Vr-ich"/>
+                <constraint firstItem="HQA-n2-yAV" firstAttribute="width" secondItem="bXY-2b-uXd" secondAttribute="width" id="N3e-zr-LhO"/>
                 <constraint firstItem="NyK-TS-84i" firstAttribute="leading" secondItem="eI5-3m-eYf" secondAttribute="leading" id="NEd-G3-YBq"/>
+                <constraint firstAttribute="trailing" secondItem="bXY-2b-uXd" secondAttribute="trailing" constant="50" id="NO3-ma-Nh2"/>
                 <constraint firstItem="X9O-Q0-zP7" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.2" id="QIR-EA-wgN"/>
-                <constraint firstAttribute="trailing" secondItem="eI5-3m-eYf" secondAttribute="trailing" constant="16" id="Uij-4a-4cT"/>
+                <constraint firstItem="Vud-Gt-yuR" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="RrW-g4-g7q"/>
+                <constraint firstItem="bXY-2b-uXd" firstAttribute="top" secondItem="Vud-Gt-yuR" secondAttribute="bottom" constant="97" id="SSm-2G-Wr8"/>
                 <constraint firstItem="eI5-3m-eYf" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Vcu-g3-xqw"/>
                 <constraint firstItem="eI5-3m-eYf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="VeA-4m-c2G"/>
                 <constraint firstItem="j6r-4z-TkJ" firstAttribute="top" secondItem="X9O-Q0-zP7" secondAttribute="bottom" constant="8" id="W6H-K2-CWE"/>
-                <constraint firstItem="WBC-ID-YiG" firstAttribute="width" secondItem="eI5-3m-eYf" secondAttribute="width" id="XsJ-D5-QJ0"/>
                 <constraint firstItem="aco-Ov-ydG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Z92-2e-seh"/>
-                <constraint firstItem="vzl-6G-ZgI" firstAttribute="leading" secondItem="eI5-3m-eYf" secondAttribute="leading" constant="8" id="aDW-ih-B5t"/>
+                <constraint firstItem="Vud-Gt-yuR" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="aqI-zC-d9Q"/>
                 <constraint firstItem="HQA-n2-yAV" firstAttribute="top" secondItem="aco-Ov-ydG" secondAttribute="bottom" constant="8" id="bR6-p4-U01"/>
                 <constraint firstItem="kUE-RO-5of" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="btq-CF-yBD"/>
                 <constraint firstItem="eI5-3m-eYf" firstAttribute="top" secondItem="Ad2-St-QZ5" secondAttribute="bottom" constant="8" id="fiB-Qc-YpM"/>
-                <constraint firstItem="B4d-Q3-ghH" firstAttribute="width" secondItem="eI5-3m-eYf" secondAttribute="width" id="kG2-kv-XwR"/>
+                <constraint firstItem="Vud-Gt-yuR" firstAttribute="top" secondItem="aco-Ov-ydG" secondAttribute="bottom" constant="11" id="gx1-vM-JHl"/>
                 <constraint firstItem="47x-55-Wbx" firstAttribute="top" secondItem="kUE-RO-5of" secondAttribute="bottom" constant="8" id="kPj-xo-vfr"/>
                 <constraint firstItem="sBz-IQ-toQ" firstAttribute="leading" secondItem="eI5-3m-eYf" secondAttribute="leading" id="lgP-a7-0Rv"/>
                 <constraint firstAttribute="bottom" secondItem="Ze0-do-JRZ" secondAttribute="bottom" constant="20" id="nUf-zG-qAc"/>
                 <constraint firstItem="X9O-Q0-zP7" firstAttribute="trailing" secondItem="eI5-3m-eYf" secondAttribute="trailing" id="oR3-pN-IYF"/>
-                <constraint firstItem="HQA-n2-yAV" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="r5G-Xr-v1j"/>
+                <constraint firstItem="WBC-ID-YiG" firstAttribute="width" secondItem="bXY-2b-uXd" secondAttribute="width" id="qOl-7R-4XY"/>
                 <constraint firstItem="Ze0-do-JRZ" firstAttribute="top" secondItem="bXY-2b-uXd" secondAttribute="bottom" constant="16" id="rdn-N7-bwU"/>
                 <constraint firstItem="HQA-n2-yAV" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="rwT-aa-6B4"/>
                 <constraint firstItem="kUE-RO-5of" firstAttribute="top" secondItem="eI5-3m-eYf" secondAttribute="bottom" constant="8" id="rxq-RY-iVN"/>
@@ -209,4 +215,8 @@
             <point key="canvasLocation" x="27.5" y="121.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="button" width="168" height="30"/>
+        <image name="npo" width="380" height="213"/>
+    </resources>
 </document>
